--- a/styles/principal.css
+++ b/styles/principal.css
@@ -5,3 +5,171 @@
     padding: 0px;
 }
 
+body{
+    min-width: 315px;
+    max-width: 768px;
+    margin: auto;
+}
+
+/****************************  Painel  *****************************/
+
+.painel-banner {
+    margin: auto;
+    background-color: rgb(0, 0, 0);
+    display: grid;
+    justify-content: center;
+}
+
+.painel-banner>img{
+    width: 100%;
+    height: 100%;
+}
+
+/******************************  Menu  *******************************/
+
+header{
+    background-color: #3EC5D4;
+    color: black;
+    display: grid;
+    justify-content: center;
+    justify-items: center;
+}
+
+#menuHamb {
+    height: 30px;
+    display: grid;
+    align-items:  center;
+}
+
+#menu {
+    display: none;
+    margin-bottom: 10px;
+}
+
+nav {
+    display: grid;
+    justify-content: center;
+}
+
+nav > a {
+    padding: 4px 14px;
+    text-decoration: none;
+    color: white;
+    border-radius: 5px 5px;
+}
+
+nav > a:hover {
+    background-color: white;
+    color: black;
+    font-weight: bolder;
+}
+
+/*****************************  Comunicado  ********************************/
+
+.comunicado, .resumo , .video-home{
+    margin: 20px 0px 10px 0px;
+    padding: 0px 15px;
+    text-align: center;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.16);
+}
+
+.comunicado>h2{
+    text-align: center;
+    font-size: 1.1em;
+    padding: 0px 0px 15px 0px;
+}
+
+.comunicado>h3{
+    text-align: center;
+    font-size: 0.8em;
+    font-weight: 500;
+}
+
+hr {
+    margin: 25px 6%;
+    border: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.723);
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.285);
+}
+
+/****************************  Resumo  *********************************/
+
+.resumo>.imghome {
+    margin-bottom: 15px;
+    width: 260px;
+    height: 270px;
+    border-radius: 5%;
+    box-shadow:2px 2px 10px rgba(0, 0, 0, 0.32);
+}
+
+.resumo>h3{
+    margin-bottom: 15px;
+}
+
+.resumo>p{
+    padding-bottom: 15px;
+    text-align: justify ;
+}
+
+/******************************  Contatos  *****************************/
+
+.contato{
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.35) ; 
+    background-color: black;
+    color: white; 
+}
+
+.contato>div>.imgreact{
+    width: 90px;
+}
+
+.contato>.imggoogleplay{
+    width: 228px;
+    height: 75px;
+    padding-bottom: 10px;
+}
+
+.contato>.imgappstore{
+    width: 250px;
+    height: 70px;
+    margin-bottom: 5px;
+}
+
+.contato>#contato2>.sobrenos{
+    padding-left: 15px;
+    text-align: center;
+}
+
+.contato>#contato2>.sobrenos>p{
+    padding-bottom: 6px;
+}
+
+.contato>#contato2{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-bottom: 10px;
+    padding-top: 20px;
+}
+
+/******************************  Footer  *******************************/
+
+footer {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    height: 40px;
+    font-size: 0.90em;
+    font-weight: 700;
+    background-color: #3EC5D4;
+    color: black;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.35) ;
+}
