--- a/styles/principal.css
+++ b/styles/principal.css
@@ -122,7 +122,9 @@ hr {
     align-items: center;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.35) ; 
     background-color: black;
-    color: white; 
+    color: white;
+    border-radius: 10px 10px 0px 0px;
+
 }
 
 .contato>div>.imgreact{
