--- a/styles/principal.css
+++ b/styles/principal.css
@@ -5,25 +5,34 @@
     padding: 0px;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+}
+
 body{
     min-width: 315px;
     max-width: 768px;
     margin: auto;
+    padding: 0px 5px;
 }
 
 /****************************  Painel  *****************************/
 
 .painel-banner {
-    margin: auto;
-    background-color: rgb(0, 0, 0);
+    min-width: 300px;
+    padding: 0px 3px;
     display: grid;
+    align-content: center;
     justify-content: center;
-}
-
-.painel-banner>img{
-    width: 100%;
-    height: 100%;
-}
+    justify-items: center;
+    height: 200px;
+    background-color: rgb(0, 0, 0);
+    box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.164);
+    background: black url('../imagens/banner-sw2.png') center center no-repeat;
+    background-size: contain;
+    padding: 10px 0px;
+}  
 
 /******************************  Menu  *******************************/
 
@@ -33,6 +42,8 @@ header{
     display: grid;
     justify-content: center;
     justify-items: center;
+    border-radius: 0px 0px 10px 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.164);
 }
 
 #menuHamb {
@@ -107,8 +118,10 @@ hr {
 }
 
 .resumo>p{
+    padding: 5px 10px 5px 15px;
     padding-bottom: 15px;
     text-align: justify ;
+    text-indent: 30px;
 }
 
 /******************************  Contatos  *****************************/
@@ -120,32 +133,57 @@ hr {
     align-content: center;
     justify-content: center;
     align-items: center;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.35) ; 
+    box-shadow: 2px -2px 5px rgba(0, 0, 0, 0.22) ; 
     background-color: black;
     color: white;
     border-radius: 10px 10px 0px 0px;
 
 }
 
-.contato>div>.imgreact{
+.contato>div>a>.imgreact{
     width: 90px;
 }
 
-.contato>.imggoogleplay{
-    width: 228px;
-    height: 75px;
-    padding-bottom: 10px;
+
+
+.contato>a>.imggoogleplay{
+    width: 236px;
+    height: 69px;
+    margin-bottom: 10px;
+    border: 3px solid rgba(0, 0, 0, 0)
 }
 
-.contato>.imgappstore{
+.contato>a>.imggoogleplay:hover{
+    width: 249px;
+    height: 79px;
+    margin-top: -10px;
+    
+}
+
+.contato>a>.imgappstore{
     width: 250px;
     height: 70px;
     margin-bottom: 5px;
 }
 
+.contato>a>.imgappstore:hover{
+    width: 270px;
+    height: 80px;
+    margin-bottom: -5px;
+}
+
 .contato>#contato2>.sobrenos{
     padding-left: 15px;
     text-align: center;
+    color: white;
+}
+
+.contato>#contato2>.sobrenos>p>a{
+    color: white;
+}
+
+.contato>#contato2>.sobrenos>p>a:hover{
+    color: #3EC5D4;
 }
 
 .contato>#contato2>.sobrenos>p{
@@ -172,6 +210,6 @@ footer {
     font-size: 0.90em;
     font-weight: 700;
     background-color: #3EC5D4;
-    color: black;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.35) ;
+    color: rgba(0, 0, 0, 0.585);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.244) ;
 }
