--- a/styles/principal.css
+++ b/styles/principal.css
@@ -5,20 +5,33 @@
     padding: 0px;
 }
 
-  @import url('https://fonts.googleapis.com/css2?family=Kreon:wght@400;500;600;700&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap');  
   @import url('https://fonts.googleapis.com/css2?family=Acme&family=Bree+Serif&display=swap');
-/*
-font-family: 'Acme', sans-serif;
-font-family: 'Bree Serif', serif;
-font-family: 'Kreon', serif;
-
-*/
-
+  /* font-family: 'Acme', sans-serif; */
 
 a {
     color: black;
     text-decoration: none;
+}
+
+h3 {
+    font-family: 'Acme', sans-serif;
+    margin: 20px 0px;
+}
+
+p {
+    text-indent: 30px;
+}
+
+section {
+    padding: 0px 15px;
+}
+
+a, p, h1, h2, h3 {
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.16);
+}
+
+.text-blue{
+    color: #16b4c5;
 }
 
 body{
@@ -87,26 +100,25 @@ nav > a:hover {
 
 /*****************************  Comunicado  ********************************/
 
-.comunicado, .resumo , .video-home{
+.comunicado{
     margin: 20px 0px 10px 0px;
     padding: 0px 15px;
     text-align: center;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.16);
 }
 
 .comunicado>h2{
     font-family: 'Acme', sans-serif;
     text-align: center;
     font-size: 1.1em;
-    padding: 0px 0px 15px 0px;
 }
 
 .comunicado>h3{
-    font-family: 'Acme', sans-serif;
     text-align: center;
-    font-size: 0.8em;
+    font-size: 0.9em;
     font-weight: 500;
 }
+
+/***************************  HR ***************************************/
 
 hr {
     margin: 25px 6%;
@@ -115,49 +127,9 @@ hr {
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.285);
 }
 
-/****************************  Resumo  *********************************/
-
-.resumo>.imghome {
-    margin-bottom: 15px;
-    width: 260px;
-    height: 270px;
-    border-radius: 5%;
-    box-shadow:2px 2px 10px rgba(0, 0, 0, 0.32);
-}
-
-.resumo>h3{
-    font-family: 'Acme', sans-serif;
-    margin-bottom: 15px;
-}
-
-.resumo>p{
-    padding: 5px 10px 5px 15px;
-    padding-bottom: 15px;
-    text-align: justify ;
-    text-indent: 30px;
-}
-
-/******************************  Video  *****************************/
-
-.video{
-    margin-bottom: 20px;
-}
-
-.video>#video-home{
-    display: flex;
-    justify-content: center;
-
-}
-
-.video>#video-home>iframe{
-    border-radius: 1%;
-    border: 5px solid black;
-}
-
-
 /******************************  Contatos  *****************************/
 
-.contato{
+.contato {
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -168,7 +140,6 @@ hr {
     background-color: black;
     color: white;
     border-radius: 10px 10px 0px 0px;
-
 }
 
 .contato>div>a>.imgreact{
