--- a/styles/guia-do-iniciante.css
+++ b/styles/guia-do-iniciante.css
@@ -5,15 +5,18 @@ h3{
 }
 
 p {
-    text-align: justify;
+    text-align: center;
+    text-indent: 10px;
 }
 
-.primeirospassos2{
+.primeirospassos1-2{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
 }
+
+.primeirospassos1-2
 
 .imgsw-logo {
     width: 305px;
