--- a/styles/guia-do-iniciante.css
+++ b/styles/guia-do-iniciante.css
@@ -7,6 +7,11 @@ h3{
 p {
     text-align: justify;
     text-indent: 10px;
+
+}
+
+body{
+    max-width:650px;
 }
 
 .primeirospassos1-2{
@@ -14,10 +19,6 @@ p {
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
-}
-
-.primeirospassos1-2{
-
 }
 
 .imgsw-logo {
@@ -30,9 +31,37 @@ p {
 }
 
 .imgsw-mundo{
-    max-width: 750px;
-    width: 90vw;
-    height: 110px;
+    max-width: 700px;
+    width: 750px;
+    height: 175px;
     margin: 25px 0px;
     box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.118);
+    display: none;
 }
+
+.imgsw-mundo2{
+    width: 283px;
+    height: 165px;
+    box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.272);
+    border-radius: 10%;
+}
+
+.img-box{
+    display: flex;
+    justify-content: center;
+    margin: 20px 0px;
+
+}
+.img-geral{
+    width: 283px;
+    height: 165px;
+    border-radius: 5%;
+    box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.313);
+}
+
+.center{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
