--- a/styles/principal.css
+++ b/styles/principal.css
@@ -19,8 +19,9 @@ h3 {
 }
 
 p {
-    text-indent: 30px;
-    margin-bottom: 15px;
+    text-align: justify;
+    text-indent: 10px;
+
 }
 
 section {
@@ -35,11 +36,6 @@ a, p, h1, h2, h3 {
 
 .text-blue{
     color: #16b4c5;
-}
-
-.text-blue2{
-    color:#3ec7d7;
-
 }
 
 body{
