adicionado barra lateral

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+.big-box>.box-menu-lateral{
+    display: none;
+}
+
 /****************************  Resumo  *********************************/
 
 .resumo{
