--- a/screens-styles/principal-screens.css
+++ b/screens-styles/principal-screens.css
@@ -9,8 +9,16 @@
 
 @media screen  and (min-width:768px) and (max-width:991px) {
 
-    .big-box>.box-menu-lateral{
+     .big-box>.box-menu-lateral{
         display: block;
+    }
+
+    .painel-banner{
+        border-radius: 0px 0px 10px 10px;
+    }
+    
+    #menuHamb{
+        display: none;
     }
 
     main {
@@ -20,11 +28,16 @@
 }
 
 @media screen  and (min-width:992px) {
-
+    
     .big-box>.box-menu-lateral{
         display: block;
     }
 
+    #menuHamb{
+        display: none;
+    }
+
+    
     main {
         max-width: 981px;
     }
