--- a/styles/principal.css
+++ b/styles/principal.css
@@ -76,6 +76,7 @@ body{
     background: black url('../imagens/banner-sw2.png') center center no-repeat;
     background-size: contain;
     padding: 10px 0px;
+    border: 5px solid #3EC5D4;
 }  
 
 /******************************  Menu  *******************************/
