--- a/styles/principal.css
+++ b/styles/principal.css
@@ -74,16 +74,20 @@ body{
     border: 5px solid rgb(62, 197, 212);
     background-color: black;
     box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.164);
+    transition: all 1s;
 }
 
 .painel-banner>.img-banner-painel{
     display: none;
+    margin: 0px;
     width: 360px;
+    transition: all 1s;
 }
 
 .painel-banner>.img-logo-painel{
     display: block;
     width: 195px;
+    transition: all 1s;
 }
 
 /******************************  Menu  *******************************/
@@ -251,7 +255,8 @@ main {
     display: none;
     margin: 20px 0px;
     min-width: 200px;
-    max-width: 200px; 
+    max-width: 200px;
+    transition: all 1s; 
 }
 
 .big-box>.box-lateral>.cases {
