--- a/styles/principal.css
+++ b/styles/principal.css
@@ -175,66 +175,7 @@ main {
     line-height: 19px;
 }
 
-.contato>div>a>.imgreact{
-    width: 105px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
-
-.contato>#contato2>.sobrenos{
-    text-align: center;
-    color: white;
-}
-
-.contato>#contato2>div>p{
-    text-indent: 0px;
-    text-align: center;
-    margin-bottom: 1px;
-}
-
-.contato>#contato2>.sobrenos>p>a{
-    color: white;
-}
-
-.contato>#contato2>.sobrenos>p>a:hover{
-    color: #3EC5D4;
-}
-
-.contato>#contato2>.sobrenos>p{
-    padding-bottom: 6px;
-}
-
-.contato>a>.imgappstore{
-    width: 250px;
-    height: 70px;
-    margin-top: 10px;
-    margin-bottom: 5px;
-    transition: all 0.2s;
-}
-
-.contato>a>.imgappstore:hover{
-    width: 270px;
-    height: 80px;
-    margin-bottom: -5px;
-    transition: all 0.2s;
-}
-
-.contato>a>.imggoogleplay{
-    width: 236px;
-    height: 69px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    transition: all 0.2s;
-}
-
-.contato>a>.imggoogleplay:hover{
-    width: 250px;
-    height: 79px;
-    margin-bottom: -5px;
-    transition: all 0.2s;
-}
-
-.contato>#contato2{
+.contato>.contato2{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -242,6 +183,51 @@ main {
     padding-bottom: 10px;
     padding-top: 20px;
 }
+
+.contato>.contato2>.sobrenos{
+    text-align: center;
+    color: white;
+}
+
+.contato>.contato2>div>p{
+    text-indent: 0px;
+    text-align: center;
+    margin-bottom: 1px;
+}
+
+.contato>.contato2>.sobrenos>p>a{
+    color: white;
+    transition: all 0.5s;
+}
+
+.contato>.contato2>.sobrenos>p>a:hover{
+    color: #3EC5D4;
+    transition: all 0.5s;
+}
+
+.contato>.contato2>.sobrenos>p{
+    padding-bottom: 6px;
+}
+
+.contato>.box-apps{
+    display: flex;
+    flex-direction: column;
+}
+
+.contato>.contato2>a>.img-react{
+    width: 105px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.contato>.box-apps>a>.img-appstore, .img-googleplay {
+    width: 250px;
+    height: 70px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    transition: all 0.2s;
+}
+
 
 /****************************  Barra Lateral  ***************************/
 
