--- a/styles/principal.css
+++ b/styles/principal.css
@@ -106,7 +106,7 @@ header{
 #menuHamb {
     height: 30px;
     display: grid;
-    align-items:  center;
+    align-items:  start;
 }
 
 #menu {
@@ -131,6 +131,47 @@ nav > a:hover {
     color: black;
     font-weight: bolder;
 }
+
+/**************************  Segundo Menu  ****************************/
+
+.menu-grande {
+    display: none;
+    width: 700px;
+    height: 59px;
+}
+
+.menu-grande>.mg-coluna{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.menu-grande>.mg-coluna>.botao-home{
+    font-size: 20px;
+    background-color: white;
+    padding: 5px;
+    margin: 0px;
+    margin-right: 10px;
+    text-indent: 0px;
+}
+
+.menu-grande>.mg-coluna>.mg-coluna2{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+}
+
+.menu-grande>.mg-coluna>.mg-coluna2>.mg-itens{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.menu-grande>.mg-coluna>.mg-coluna2>.mg-itens>nav>a{
+    color: black;
+    font-weight: 600;
+}
+
 
 /*****************************  Main  ********************************/
 
@@ -157,6 +198,51 @@ main {
     text-align: center;
     font-size: 0.9em;
     font-weight: 500;
+}
+
+/****************************  Barra Lateral  ***************************/
+
+.big-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.big-box>.box-lateral{
+    display: none;
+    margin: 20px 0px;
+    min-width: 200px;
+    max-width: 200px;
+    transition: all 1s; 
+}
+
+.big-box>.box-lateral>.cases {
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 5px solid rgba(62, 197, 212, 0.622);
+    background-color: rgba(62, 197, 212, 0.105);
+    border-radius: 5px;
+    box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.17);
+}
+
+.big-box>.box-lateral>.cases>div>p{
+    text-indent: 0px;
+}
+
+.big-box>.box-lateral>.cases>.case-logo{
+    display: flex;
+    align-items: center;
+    background-color: black;
+    height: 190px;
+}
+
+.big-box>.box-lateral>.cases>.case-logo>.img-logo-lateral{
+    margin: 0px;
+    width: 190px;
+    box-shadow: none;
+    border-radius: none;
 }
 
 /******************************  Contatos  *****************************/
@@ -211,51 +297,6 @@ main {
 .contato>.contato-apps>a>.img-appstore, .img-googleplay {
     width: 210px;
     margin: 5px;
-}
-
-/****************************  Barra Lateral  ***************************/
-
-.big-box {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.big-box>.box-lateral{
-    display: none;
-    margin: 20px 0px;
-    min-width: 200px;
-    max-width: 200px;
-    transition: all 1s; 
-}
-
-.big-box>.box-lateral>.cases {
-    margin-bottom: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 5px solid rgba(62, 197, 212, 0.622);
-    background-color: rgba(62, 197, 212, 0.105);
-    border-radius: 5px;
-    box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.17);
-}
-
-.big-box>.box-lateral>.cases>div>p{
-    text-indent: 0px;
-}
-
-.big-box>.box-lateral>.cases>.case-logo{
-    display: flex;
-    align-items: center;
-    background-color: black;
-    height: 190px;
-}
-
-.big-box>.box-lateral>.cases>.case-logo>.img-logo-lateral{
-    margin: 0px;
-    width: 190px;
-    box-shadow: none;
-    border-radius: none;
 }
 
 /******************************  Footer  *******************************/
