--- a/styles/principal.css
+++ b/styles/principal.css
@@ -136,42 +136,104 @@ nav > a:hover {
 
 .menu-grande {
     display: none;
-    width: 700px;
-    height: 59px;
 }
 
-.menu-grande>.mg-coluna{
+.menu-grande>.mg-box>.menu{
     display: flex;
-    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
+    width: 743px;
 }
 
-.menu-grande>.mg-coluna>.botao-home{
-    font-size: 20px;
+
+.menu-grande>.mg-box>.menu {
+    list-style: none;
+    float: left;
+    margin: 5px 0px 10px 0px;
+
+}
+
+.menu-grande>.mg-box>.menu>.botao-home{
+    border: 2px solid rgba(255, 255, 255, 0.216);
+    border-radius: 10px;
+    margin-left: 5px;
+    width: 120px;
+}
+
+.menu-grande>.mg-box>.menu>li{
+    position: relative;
+    float: left;
+    text-align: center;
+    width: 173px;
+    padding: 10px 0px;
+}
+
+.menu-grande>.mg-box>.menu>li>a{
+    text-decoration: none;
+    color: white;
+    padding: 10px 40px;
+}
+
+.menu-grande>.mg-box>.menu>li>ul{
+    position: absolute;
+    top: 40px;
+    left: 0px;
+    display: none;
+}
+
+.menu-grande>.mg-box>.menu>li:hover, .menu-grande>.mg-box>.menu>li:hover>ul{
+    display: block;
+}
+
+.menu-grande>.mg-box>.menu>li{
+    border: 2px solid rgba(255, 255, 255, 0);
+    transition: all 0.5s;
+    border-radius: 10px;
+}
+
+.menu-grande>.mg-box>.menu>li:hover{
+    background-color: rgba(0, 0, 0, 0.916);
+    color:white;
+    border: 2px solid white;
+    transition: all 0.5s;
+    
+}
+
+
+
+.menu-grande>.mg-box>.menu>li>ul{
+    width: 171px;
+}
+
+.menu-grande>.mg-box>.menu>li>ul>li{
+    display: block;
+    padding: 10px;
+    font-size: 0.85em;
+    border: 1px solid #3EC5D4;
     background-color: white;
-    padding: 5px;
-    margin: 0px;
-    margin-right: 10px;
-    text-indent: 0px;
+    border-radius: 5px;
+    transition: all 0.5s;
 }
 
-.menu-grande>.mg-coluna>.mg-coluna2{
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-}
-
-.menu-grande>.mg-coluna>.mg-coluna2>.mg-itens{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.menu-grande>.mg-coluna>.mg-coluna2>.mg-itens>nav>a{
-    color: black;
+.menu-grande>.mg-box>.menu>li>ul>li>a{
+    padding: 10px 13px;
+    color: #000000;
+    text-shadow: none;
     font-weight: 600;
+    transition: all 0.5s;
 }
 
+.menu-grande>.mg-box>.menu>li:hover>ul>li:hover{
+    transition: all 0.5s;
+    background-color: black;
+    border: 1px solid black;
+    transition: all 0.5s;
+}
+
+.menu-grande>.mg-box>.menu>li:hover>ul>li>a:hover{
+    color: #ffffff;
+    transition: all 0.5s;
+}
 
 /*****************************  Main  ********************************/
 
