--- a/styles/principal.css
+++ b/styles/principal.css
@@ -196,37 +196,34 @@ nav > a:hover {
     color:white;
     border: 2px solid white;
     transition: all 0.5s;
-    
 }
 
-
-
 .menu-grande>.mg-box>.menu>li>ul{
-    width: 171px;
+    background-color: #000000;
+    width: 169px;
+    border: 2px solid black;
+    border-radius: 5px;
 }
 
 .menu-grande>.mg-box>.menu>li>ul>li{
     display: block;
     padding: 10px;
     font-size: 0.85em;
-    border: 1px solid #3EC5D4;
     background-color: white;
-    border-radius: 5px;
     transition: all 0.5s;
+    margin: 1px 0px;
 }
 
 .menu-grande>.mg-box>.menu>li>ul>li>a{
     padding: 10px 13px;
-    color: #000000;
+    color: rgb(0, 0, 0);
     text-shadow: none;
     font-weight: 600;
     transition: all 0.5s;
 }
 
 .menu-grande>.mg-box>.menu>li:hover>ul>li:hover{
-    transition: all 0.5s;
     background-color: black;
-    border: 1px solid black;
     transition: all 0.5s;
 }
 
