--- a/styles/principal.css
+++ b/styles/principal.css
@@ -278,6 +278,7 @@ main {
 .big-box>.box-lateral>.cases {
     margin-bottom: 10px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     border: 5px solid rgba(62, 197, 212, 0.622);
@@ -286,8 +287,23 @@ main {
     box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.17);
 }
 
-.big-box>.box-lateral>.cases>div>p{
+.big-box>.box-lateral>.cases>h4{
+    margin: 5px 0px;
+}
+
+.big-box>.box-lateral>.cases>p{
     text-indent: 0px;
+}
+
+.big-box>.box-lateral>.cases>.case-texto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 7px 0px;
+}
+
+.big-box>.box-lateral>.cases>.case-texto>p{
+    margin: 6px 0px;
 }
 
 .big-box>.box-lateral>.cases>.case-logo{
