--- a/screens-styles/home-screens.css
+++ b/screens-styles/home-screens.css
@@ -2,20 +2,40 @@
 
 @media screen  and (min-width:600px) and (max-width:767px) {
 
-
+    .video>.video-home>iframe{
+        width: 510px;
+        height: 266px;
+        transition: all 0.5s;
+    }
 
 }
 
 @media screen  and (min-width:768px) and (max-width:991px) {
 
-    #menuHamb{
-        display: none;
+    .video>.video-home>iframe{
+        width: 460px;
+        height: 240px;
+        transition: all 0.5s;
     }
 
 }
 
-@media screen  and (min-width:992px) {
+@media screen  and (min-width:992px) and (max-width:1199px){
 
- 
+    .video>.video-home>iframe{
+        width: 620px;
+        height: 324px;
+        transition: all 0.5s;
+    }
+
+}
+
+@media screen  and (min-width:1200px) {
+
+    .video>.video-home>iframe{
+        width: 720px;
+        height: 376px;
+        transition: all 1s;
+    }
 
 }
