--- a/styles/home.css
+++ b/styles/home.css
@@ -13,10 +13,12 @@
     width: 250px;
     height: 280px;
     border-radius: 10px;
+    transition: all 0.5s;
 }
 
-.resumo>.imghome2 {
+.resumo>div>.imghome2 {
     display: none;
+    transition: all 0.5s;
 }
 
 .resumo>div>p {
