--- a/styles/principal.css
+++ b/styles/principal.css
@@ -37,7 +37,7 @@ a, p, h1, h2, h3 {
 }
 
 img {
-    border-radius: 5%;
+    border-radius: 10px;
     box-shadow:  2px 2px 5px rgba(0, 0, 0, 0.30);
     margin: 15px 0px;
 }
