--- a/screens-styles/guia-iniciantes-screens.css
+++ b/screens-styles/guia-iniciantes-screens.css
@@ -65,11 +65,42 @@
         display: block;
         width: 220px;
         height: auto;
-        margin: 0px 10px 0px 25px;
+        margin: 0px 0px 0px 25px;
     }
 
+    .box-text-ci{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        margin-top: 10px;
+    }
+
+    .box-img-texto{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .box-img-texto>.img-box>.imgsw-mundo2{
+        display: none;
+    }
+
+    .box-img-texto>.img-box>.imgsw-mundo{
+        display: block;
+        width: 760px;
+        height: 180px;
+        margin-top: 0px;
+        margin-bottom: 10px;
+    }
+
+    .box-img-texto>p{
+        text-align: center;
+    }
     
-    
+    .img-box {
+        
+    }
     
 }
 
